--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@headlessui/react": "^2.0.3",
 		"@heroicons/react": "^2.1.3",
+		"@hookform/resolvers": "^3.4.2",
 		"axios": "^1.7.2",
 		"concurrently": "^8.2.2",
 		"json-server": "^0.17.0",
@@ -19,7 +20,8 @@
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.5",
 		"react-router-dom": "^6.23.1",
-		"sass": "^1.77.1"
+		"sass": "^1.77.1",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.43",
